241101-继续做SmokeGhost，添加一些javadoc，优化