@@ -1,24 +1,29 @@
 package mc.alive.role.hunter;
 
+import mc.alive.PlayerData;
+import mc.alive.effect.Exposure;
+import mc.alive.effect.Giddy;
 import mc.alive.effect.Slowness;
 import mc.alive.role.Skill;
 import mc.alive.util.ItemBuilder;
-import mc.alive.util.Message;
+import mc.alive.util.LocationFactory;
 import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.Particle;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 
+import java.util.Collections;
 import java.util.List;
 
 import static mc.alive.Alive.plugin;
+import static mc.alive.util.Message.rMsg;
 
 public class SmokeGhost extends Hunter {
     private boolean ghost = false;
 
     public SmokeGhost(Player pl) {
-        super(pl);
+        super(pl, 100);
     }
 
     @Override
@@ -38,22 +43,16 @@ public class SmokeGhost extends Hunter {
 
     @Override
     public List<ItemStack> getRedFeatures() {
-        return List.of(new ItemStack(Material.DIAMOND));
-    }
-
-    @Override
-    public List<ItemStack> getGreenFeatures() {
-        return List.of(new ItemStack(Material.DIAMOND));
-    }
-
-    @Override
-    public List<ItemStack> getBlueFeatures() {
-        return List.of(new ItemStack(Material.DIAMOND));
-    }
-
-    @Override
-    public int getRoleID() {
-        return 100;
+        return List.of(
+                ItemBuilder.material(Material.FIREWORK_STAR)
+                        .name(rMsg("迷雾"))
+                        .lore(Collections.singletonList(rMsg("")))
+                        .build(),
+                ItemBuilder.material(Material.FIREWORK_STAR)
+                        .name(rMsg("烟界"))
+                        .lore(Collections.singletonList(rMsg("")))
+                        .build()
+        );
     }
 
     @Override
@@ -73,7 +72,7 @@ public class SmokeGhost extends Hunter {
 
     @Override
     public void equip() {
-        player.getInventory().setItem(0, ItemBuilder.material(Material.DIAMOND_HOE, 10100).name(Message.rMsg("<gold><bold>test")).build());
+        player.getInventory().setItem(0, ItemBuilder.material(Material.DIAMOND_HOE, 10100).name(rMsg("<gold><bold>test")).build());
     }
 
     @Skill(name = "雾障", id = 1)
@@ -85,12 +84,22 @@ public class SmokeGhost extends Hunter {
             @Override
             public void run() {
                 player.getWorld().spawnParticle(Particle.SMOKE, location, 10, 0.5, 0, 0.5, 0.1);
-                location.getNearbyPlayers(2, 0.01, pl -> !pl.equals(player))
-                        .forEach(pl -> getPlayerData(pl).addEffect(new Slowness(pl, 20, 1)));
-                if (time++ == 100) removeSkillLocation(location);
+                if (skillFeature == 0) {
+                    location.getNearbyPlayers(2, 0.01, pl -> !pl.equals(player))
+                            .forEach(pl -> {
+                                PlayerData playerData = getPlayerData(pl);
+                                playerData.addEffect(new Giddy(pl, 40));
+                                playerData.addEffect(new Exposure(pl, 300));
+                            });
+                    removeSkillLocation(location);
+                } else {
+                    location.getNearbyPlayers(2, 0.01, pl -> !pl.equals(player))
+                            .forEach(pl -> getPlayerData(pl).addEffect(new Slowness(pl, 20, 1)));
+                    if (time++ == 100) removeSkillLocation(location);
+                }
             }
         }, 1);
-        setSKillCD(1, 100);
+        setSKillCD(1, 200);
     }
 
     @Skill(name = "鬼烟", id = 2)
@@ -98,21 +107,33 @@ public class SmokeGhost extends Hunter {
         player.getWorld().spawnParticle(Particle.SMOKE, player.getLocation(), 100, 0.5, 0, 0.5, 0.1);
         Location loc = new Location(player.getWorld(), 0, -1, 0);
         if (ghost) {
+            //退出二重世界
             removeSkillLocation(loc);
             getGame().survivors.forEach(pl -> {
                 pl.showPlayer(plugin, player);
                 player.showPlayer(plugin, pl);
             });
         } else {
-            addSkillLocation(loc, () ->
-                    getGame().survivors.forEach(pl ->
-                            player.spawnParticle(Particle.DUST, pl.getLocation().add(0, 1, 0), 1, 0, 0, 0, 0.1, new Particle.DustOptions(org.bukkit.Color.fromRGB(0, 0, 255), 1))
-                    ), 10);
+            //进入二重世界
+            addSkillLocation(loc, () -> {
+                if (skillFeature == 0) {
+                    player.getWorld().spawnParticle(Particle.ASH, player.getLocation(), 1);
+                    getGame().survivors.forEach(pl -> {
+                        var v = pl.getLocation().subtract(player.getLocation()).toVector().normalize().multiply(5);
+                        for (Location location : LocationFactory.line(player.getEyeLocation(), player.getEyeLocation().add(v), 0.5)) {
+                            player.spawnParticle(Particle.DUST, location, 1, 0, 0, 0, 0.1, new Particle.DustOptions(org.bukkit.Color.fromRGB(0, 0, 255), 1));
+                        }
+                    });
+                } else getGame().survivors.forEach(pl ->
+                        player.spawnParticle(Particle.DUST, pl.getLocation().add(0, 1, 0), 1, 0, 0, 0, 0.1, new Particle.DustOptions(org.bukkit.Color.fromRGB(0, 0, 255), 1))
+                );
+            }, 10);
             getGame().survivors.forEach(pl -> {
                 pl.hidePlayer(plugin, player);
                 player.hidePlayer(plugin, pl);
             });
         }
+
         ghost = !ghost;
         setSKillCD(2, 100);
     }
